<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2012 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- This can go anywhere in your layout (see other demos for some examples). -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:name="csm117.ucla.capturetheflag.NewGameActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fragment
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_weight="3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="5dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tap_instruction" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="3"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_name" />

                <EditText
                    android:id="@+id/game_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/type_here"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:inputType="text"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_name" />

                <EditText
                    android:id="@+id/player_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/type_here"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="actionDone"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orientation" />

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:checkedButton="@+id/radio_horizontal">
                    <RadioButton android:id="@+id/radio_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/horizontal"
                        android:onClick="onRadioButtonClicked"/>
                    <RadioButton android:id="@+id/radio_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vertical"
                        android:onClick="onRadioButtonClicked"/>
                </RadioGroup>

            </GridLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:onClick="pressConfirm"
                android:text="@string/confirm" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>



